# recallstack

./: .gitignore
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dsa-import-applied.json  dsa-import-report.json  openapi.json  openapi_pretty.json  pyproject.toml
backend/.github/workflows/: backend-ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 20260711_0001_identity.py  20260711_0002_catalog.py  20260711_0003_content.py  20260711_0004_learning.py  20260711_0005_practice.py  20260711_0006_recall.py  20260711_0007_sync.py  20260711_0008_practice_attempt_idempotency.py  20260711_0009_content_version_published_by.py  20260711_0010_catalog_search.py  20260717_0011_admin_content_resource_revision.py  20260719_0012_versioned_content_taxonomy.py  20260719_0013_idempotency_result_snapshots.py
backend/docker/postgres-init/: 001_auth_adapter.sql
backend/docs/: dsa-workbook-import.md  recallstack_final_supabase.dbml  rollback.md  schema.md
backend/docs/adr/: 0001-modular-monolith-extraction.md  0002-version-owned-taxonomy.md
backend/docs/database/: alembic-schema-reconciliation.md
backend/scripts/: check_supabase_connection.cmd  check_supabase_connection.ps1  check_supabase_connection.py  drop_recallstack_public_objects.sql
backend/src/recallstack/: __init__.py  health.py  main.py
backend/tests/: __init__.py  conftest.py  fakes.py
backend/tests/admin/: __init__.py  test_admin_content_api.py  test_admin_content_service.py  test_admin_user_api.py  test_admin_user_service.py  test_dsa_import.py
(+312 files in other folders)
