[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "recallstack-backend"
version = "0.1.0"
description = "RecallStack modular-monolith backend"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic==1.18.5",
  "cryptography==49.0.0",
  "defusedxml==0.7.1",
  "fastapi==0.139.0",
  "httpx==0.28.1",
  "psycopg[binary,pool]==3.3.4",
  "pydantic-settings==2.14.2",
  "pyjwt[crypto]==2.13.0",
  "sqlalchemy==2.0.51",
  "tzdata==2026.3",
  "uvicorn[standard]==0.51.0",
]

[dependency-groups]
dev = [
  "mypy==2.2.0",
  "pip-audit==2.10.1",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "ruff==0.15.21",
  "testcontainers[postgres]==4.14.2",
  "types-defusedxml==0.7.0.20260504",
]

[tool.hatch.build.targets.wheel]
packages = ["src/recallstack"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = ["integration: requires Docker or TEST_DATABASE_URL"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]
"tests/**/*.py" = ["S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
packages = ["recallstack"]

[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true
